--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -3,50 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/preset-env": "^7.21.5",
-    "@babel/preset-react": "^7.18.6",
-    "@storybook/addon-docs": "^7.0.12",
-    "@storybook/addon-essentials": "^7.0.11",
-    "@storybook/addon-interactions": "^7.0.11",
-    "@storybook/addon-links": "^7.0.11",
-    "@storybook/blocks": "^7.0.11",
-    "@storybook/preset-create-react-app": "^7.0.11",
-    "@storybook/react": "^7.0.11",
-    "@storybook/react-vite": "^7.0.11",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.1",
-    "@types/react": "^18.2.6",
-    "@types/styled-components": "^5.1.26",
-    "@types/styled-system": "^5.1.16",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "babel-jest": "^29.5.0",
-    "babel-plugin-styled-components": "^2.1.1",
-    "enzyme-to-json": "^3.6.2",
-    "eslint": "^7.32.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "prettier": "^2.5.1",
-    "prop-types": "^15.8.1",
-    "react-test-renderer": "^18.2.0",
-    "storybook": "^7.0.11",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
-  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
