feat: new ci/cd workflows 🌊

--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "ci:publish": "pnpm run build && pnpm publish --access public"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
