--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -3,6 +3,7 @@ on:
     paths:
       - "docs/*.mdx"
       - "packages/**/src/stories/**/*.stories.@(js|jsx|ts|tsx)"
+      - ".github/workflows/storybook.yml"
 
 name: Publish stories if changed
 
@@ -13,10 +14,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Node.js ${{ matrix.node }}
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 16
 
       - name: Install pnpm
         run: curl -f https://get.pnpm.io/v6.js | node - add --global pnpm
