--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -5,7 +5,7 @@ on:
       - "packages/**/src/stories/**/*.stories.@(js|jsx|ts|tsx)"
       - ".github/workflows/storybook.yml"
 
-name: Publish stories if changed
+name: Publish storybook
 
 jobs:
   build-and-deploy:
@@ -23,7 +23,7 @@ jobs:
         run: curl -f https://get.pnpm.io/v6.js | node - add --global pnpm
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       - name: Run tests
         run: pnpm run test
