chore: clean ts config 🧹

--- a/packages/atoms/tsconfig.json
+++ b/packages/atoms/tsconfig.json
@@ -27,5 +27,5 @@
     "outDir": "./build"
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["src/stories", "src/tests"]
+  "exclude": ["src/stories", "src/tests", "node_modules"]
 }
