test: fixing workflow🧪

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: 16
 
       - name: Install pnpm
-        run: curl -f https://get.pnpm.io/v6.js | node - add --global pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
