--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -10,30 +10,36 @@ name: Publish storybook
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.2.2
+
+      - name: Use Node
         uses: actions/setup-node@v2
         with:
           node-version: 16
 
-      - name: Install pnpm
-        run: npm install -g pnpm
+      - name: Install
+        run: pnpm install
 
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+      - name: Install Github Pages
+        run: pnpm add -Dw gh-pages
 
-      - name: Run tests
-        run: pnpm run test
+      - name: Build
+        run: pnpm build
+
+      - name: Test
+        run: pnpm vitest --run --update
 
       - name: Build Storybook
-        run: pnpm run build-storybook
+        run: pnpm build-storybook
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.5
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          folder: storybook-static
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./storybook-static
