test: sb workflow 🧪

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -29,11 +29,8 @@ jobs:
       - name: Install Github Pages
         run: pnpm add -Dw gh-pages
 
-      - name: Build
-        run: pnpm build
-
-      - name: Test
-        run: pnpm vitest --run --update
+      - name: Run tests
+        run: pnpm run test
 
       - name: Build Storybook
         run: pnpm build-storybook
