--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["jest", "node"],
-    "rootDir": "**/**/src",
-    "outDir": "./build"
+    "types": ["jest", "node"]
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["src/stories", "src/tests", "node_modules"]
