--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -54,7 +54,8 @@ jobs:
       - name: Publish Atoms
         uses: changesets/action@v1
         with:
-          publish: cd packages/atoms && pnpm publish --access public
+          publish: pnpm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          working-directory: ./packages/atoms
