--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -47,14 +47,17 @@ jobs:
       - name: Test
         run: pnpm test
 
+      - name: Change directory to Atoms
+        run: cd packages/atoms
+
       - name: Build
         run: pnpm run build
-        working-directory: ./packages/atoms
+        # working-directory: ./packages/atoms
 
       - name: Publish Atoms
         uses: changesets/action@v1
         with:
-          publish: cd ./packages/atoms && pnpm publish --access public
+          publish: pnpm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
