--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -47,24 +47,14 @@ jobs:
       - name: Test
         run: pnpm test
 
-      - name: Build
-        run: pnpm run build
+      - name: Build Atoms
+        run: pnpm build
+        working-directory: ./packages/atoms
 
       - name: Publish Atoms
         uses: changesets/action@v1
         with:
-          publish: pnpm run publish-atoms
+          publish: pnpm changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
