--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -51,7 +51,7 @@ jobs:
         run: pnpm build
         working-directory: ./packages/atoms
 
-      - name: Publish Atoms
+      - name: PR or Publish
         uses: changesets/action@v1
         with:
           publish: pnpm changeset publish
