--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "description": "",
   "main": "build/index.js",
+  "types": "build/index.d.ts",
   "files": [
     "build"
   ],
