--- a/packages/atoms/tsconfig.json
+++ b/packages/atoms/tsconfig.json
@@ -24,8 +24,9 @@
     "jsx": "react-jsx",
     "types": ["jest", "node"],
     "rootDir": "src",
-    "outDir": "./build"
+    "outDir": "./build",
+    "declaration": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["src"],
   "exclude": ["src/stories", "src/tests", "node_modules"]
 }
