fix: invalid type import 🩹

--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-system": "^5.1.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.9",
