--- a/packages/atoms/tsconfig.json
+++ b/packages/atoms/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "ES2022",
+    "lib": ["dom", "dom.iterable", "esnext", "ES2022.Intl"],
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
