--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -8,7 +8,7 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && node scripts/copyCSS.js",
     "ci:publish": "pnpm run build && pnpm publish --access public"
   },
   "keywords": [],
