--- a/packages/atoms/tsconfig.json
+++ b/packages/atoms/tsconfig.json
@@ -28,5 +28,11 @@
     "declaration": true
   },
   "include": ["src"],
-  "exclude": ["src/**/*.stories.tsx", "src/**/*.test.tsx", "node_modules"]
+  "exclude": [
+    "src/**/*.stories.tsx",
+    "src/**/*.test.tsx",
+    "node_modules",
+    "src/Sample",
+    "scripts"
+  ]
 }
