--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -9,7 +9,14 @@
     "build"
   ],
   "exports": {
-    "./utils": "./src/utils/"
+    ".": {
+      "default": "build/index.js",
+      "types": "build/index.d.ts"
+    },
+    "./utils": {
+      "default": "build/utils/index.js",
+      "types": "build/utils/index.d.ts"
+    }
   },
   "scripts": {
     "build": "tsc && node scripts/copyCSS.js",
