--- a/packages/atoms/tsconfig.json
+++ b/packages/atoms/tsconfig.json
@@ -21,7 +21,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "types": ["jest", "node"],
     "rootDir": "src",
     "outDir": "./build",
