--- a/packages/atoms/tsconfig.json
+++ b/packages/atoms/tsconfig.json
@@ -16,7 +16,7 @@
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -24,15 +24,22 @@
     "jsx": "preserve",
     "types": ["jest", "node"],
     "rootDir": "src",
-    "outDir": "./build",
-    "declaration": true
+    // "outDir": "./build",
+    "declaration": true,
+
+    "allowJs": true,
+    "baseUrl": ".",
+    "outDir": ".",
+    "skipDefaultLibCheck": true,
+    "stripInternal": true,
+    "declarationMap": true
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": [
     "src/**/*.stories.tsx",
     "src/**/*.test.tsx",
     "node_modules",
-    "src/Sample",
+    "src/lib/Sample",
     "scripts"
   ]
 }
