--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nimbleuikit/atoms": "^0.4.3",
+    "@nimbleuikit/atoms": "workspace:0.4.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
