--- a/packages/atoms/tsconfig.json
+++ b/packages/atoms/tsconfig.json
@@ -24,13 +24,12 @@
     "jsx": "preserve",
     "types": ["jest", "node"],
     "rootDir": "src",
-    // "outDir": "./build",
     "declaration": true,
-
     "allowJs": true,
     "baseUrl": ".",
     "outDir": ".",
     "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
     "stripInternal": true,
     "declarationMap": true
   },
