fix: package exports 🧑‍🔧

--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -5,7 +5,9 @@
   "homepage": "https://github.com/JohnVersus/nimbleuikit",
   "files": [
     "*.js",
-    "*.d.ts*"
+    "*.d.ts*",
+    "lib",
+    "utils"
   ],
   "types": "./index.d.ts",
   "exports": {
