--- a/packages/atoms/tsconfig.json
+++ b/packages/atoms/tsconfig.json
@@ -35,8 +35,8 @@
   },
   "include": ["src/**/*"],
   "exclude": [
-    "src/**/*.stories.tsx",
-    "src/**/*.test.tsx",
+    // "src/**/*.stories.tsx",
+    // "src/**/*.test.tsx",
     "node_modules",
     "src/lib/Sample",
     "scripts"
