--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nimbleuikit/atoms": "workspace:0.5.2",
+    "@nimbleuikit/atoms": "0.5.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
