--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -8,9 +8,11 @@
     "*.d.ts",
     "lib",
     "utils",
+    "src",
     "!**/*.test.*",
     "!**/*.stories.*"
   ],
+  "main": "./index.js",
   "types": "./index.d.ts",
   "exports": {
     ".": {
