--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,16 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nimbleuikit/atoms": "^0.5.3",
+    "@nimbleuikit/atoms": "workspace:^0.5.3",
     "@t3-oss/env-nextjs": "^0.3.1",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/preset-env": "^7.21.5",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.6",
