--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nimbleuikit/atoms": "^0.6.0",
+    "@nimbleuikit/atoms": "workspace:^0.6.0",
     "@t3-oss/env-nextjs": "^0.3.1",
     "next": "^13.4.2",
     "react": "18.2.0",
