--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -19,7 +19,9 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
-    }
+    },
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "include": [
     ".eslintrc.cjs",
