--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nimbleuikit/atoms": "^0.6.0",
+    "@nimbleuikit/atoms": "workspace:^0.6.0",
     "@types/node": "20.5.3",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -20,5 +18,9 @@
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7"
   }
 }
