--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
   "packageManager": "pnpm@7.15.0",
   "name": "nimbleuikit",
   "dependencies": {
+    "@nimbleuikit/atoms": "workspace:^0.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10"
   }
 }
