--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install
         run: pnpm install
 
+      - name: Install nimble
+        run: pnpm install @nimbleuikit/atoms@latest
+
       - name: Install Github Pages
         run: pnpm add -Dw gh-pages
 
