--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
     paths:
-      - "docs/*.mdx"
+      - "docs/**"
       - "packages/**"
       # - ".github/workflows/storybook.yml"
 
