--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - "docs/**"
       - "packages/**"
-      # - ".github/workflows/storybook.yml"
+      - ".github/workflows/storybook.yml"
 
 name: Publish storybook
 
@@ -29,7 +29,7 @@ jobs:
         run: pnpm install
 
       - name: Install nimble
-        run: pnpm install @nimbleuikit/atoms@latest
+        run: pnpm install @nimbleuikit/atoms@latest --workspace-root
 
       - name: Install Github Pages
         run: pnpm add -Dw gh-pages
